--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -1,23 +1,23 @@
-name: Storybook
-on:
+name: Build and Deploy
+on: 
   push:
-    branches:
-      - master 
-
+    paths: ["stories/**", "src/components/**"] # Trigger the action only when files change in the folders defined here
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Checkout 🛎️
         uses: actions/checkout@v2.3.1
-
-      - name: Install and Build
-        run: |
-          npm ci
+        with:
+          persist-credentials: false
+      - name: Install and Build 🔧
+        run: | # Install npm packages and build the Storybook files
+          npm install
           npm run build-storybook
-
-      - name: Deploy
+      - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@3.6.2
         with:
-          branch: gh-pages
-          folder: storybook-static # output folder from `npm run build-storybook`
+          BRANCH: master # The branch the action should deploy to.
+          FOLDER: docs-build # The folder that the build-storybook script generates files.
+          CLEAN: true # Automatically remove deleted files from the deploy branch
+          TARGET_FOLDER: docs 
