--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "rollup": "rollup -c",
     "test": "jest",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "chromatic": "npx chromatic --project-token=bda65108e7e2"
   },
-  "author": "Neelam Shah",
+  "author": {
+    "name": "Neelam Shah"
+  },
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.18.10",
@@ -35,6 +38,7 @@
     "@types/styled-components": "^5.1.25",
     "babel-jest": "^28.1.3",
     "babel-loader": "^8.2.5",
+    "chromatic": "^6.7.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^28.1.3",
@@ -64,5 +68,7 @@
   "peerDependencies": {
     "react": "^18.2.0",
     "webpack": "*"
-  }
+  },
+  "readme": "ERROR: No README data found!",
+  "_id": "@neelamshah02/react-components@0.0.10"
 }
